syntax = "proto3";

import "google/protobuf/empty.proto";
import "services/identity.proto";

package services;

message PingMessage { ServerIdentity server_identity = 1; }

service PingTracker {
  rpc Ping(PingMessage) returns (google.protobuf.Empty) {}
}
